Fixed the navigation bar for smaller screen sizes. The different nav buttons will stack on top of each other when the screen is too small. Additionally, the styles.css sheet was organized and CSS code for the news containers has its own seperate file.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,7 @@
   font-family: sans-serif;
 }
 
+/* CSS for navigation bar */
 .nav-bar {
   background-color: #42455a; 
   overflow: hidden;
@@ -17,6 +18,16 @@
   text-decoration: none;
   font-size: 20px;
   padding-top: 20px;
+}
+
+.nav-bar .signup-btn {
+  float: right;
+  background-color: red;
+}
+
+.nav-bar .login-btn {
+  float: right;
+  background-color: black;
 }
 
 .nav-bar a:hover, .dropdown:hover .dropbtn {
@@ -37,101 +48,6 @@
   padding-left: 10px;
 }
 
-
-.signup-btn{
-  top: 15px;
-  right: 180px;
-  position: absolute;
-  text-decoration: none;
-  color: #fff;
-  font-size: 18px;
-  cursor: pointer;
-  border: 2px solid transparent;
-  border-radius: 20px;
-  background-origin: border-box;
-  background-image: linear-gradient(#42455a,#42455a);
-  background-image: linear-gradient(#42455a,#42455a), radial-gradient(circle at top left,#fd00da,#19d7f8);
-  background-clip: content-box, border-box;
-}
-
-.signup-btn span{
-  display: block;
-  padding: 8px 22px;
-}
-
-.login-btn{
-  top: 15px;
-  right: 50px;
-  position: absolute;
-  text-decoration: none;
-  color: #fff;
-  font-size: 18px;
-  cursor: pointer;
-  border: 2px solid transparent;
-  border-radius: 20px;
-  background-image: linear-gradient(#42455a,#42455a), radial-gradient(circle at top left,#fd00da,#19d7f8);
-  background-origin: border-box;
-  background-clip: content-box, border-box;
-}
-    
-.login-btn span{
-  display: block;
-  padding: 8px 20px;
-}
-
-.container{
-  margin: 10px 40px 0 80px;
-  display: inline-flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-}
-
-
-.card {
-  display: grid;
-  width: 30%;
-  height: auto;
-  margin: 20px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  border-radius: 5px;
-  background-color: lightgrey;
-}
-
-.card-body {
-  padding: 20px;
-  text-align: center;
-}
-
-.card-title {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-.card-text {
-  font-size: 18px;
-  color: #333;
-  margin-bottom: 10px;
-}
-
-.btn {
-  border: none;
-  border-radius: 5px;
-  padding: 10px 30px;
-  font-size: 18px;
-  font-weight: bold;
-  background-color: #0099ff;
-  color: #fff;
-  cursor: pointer;
-  transition: 0.3s;
-  text-decoration: none;
-}
-
-.btn:hover {
-  background-color: #33b5e5;
-}
-
 .dropdown {
   float: left;
   overflow: hidden;
@@ -146,6 +62,7 @@
   font-family: inherit;
   padding-top: 20px;
   border: none;
+  cursor: pointer;
 }
 
 .dropdown-content {
@@ -173,3 +90,40 @@
 .dropdown:hover .dropdown-content {
   display: block;
 }
+
+/* CSS for navigation bar (for smaller screens) */
+@media screen and (max-width: 500px) {
+  .nav-bar a {
+    float: none;
+    display: block;
+    text-align: center;
+    border-bottom: 0.5px solid black;
+  }
+  
+  .nav-bar .dropdown {
+    float: none;
+    display: block;
+    text-align: center;
+    width: 100%;
+  }
+ 
+  .nav-bar .news-dropdown-content{
+    left: 0;
+    width: 100%;
+    text-align: center;
+  }
+
+  .nav-bar .login-btn {
+    float: none;
+    display: block;
+    text-align: center;
+  }
+
+  .nav-bar .signup-btn {
+    float: none;
+    display: block;
+    text-align: center;
+  }
+}
+
+
